syntax = "proto3";

option java_package = "com.example.datastore";
option java_multiple_files = true;

message Credentials {

  string user_name = 1;
  string user_email = 2;

  enum UserType {
    UNKNOWN = 0;
    ADMIN = 1;
    MANAGER = 2;
    REGULAR = 3;
  }

  UserType userType = 3;
}
